[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/ui/menu/tile650.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ui/menu/tile601.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/menu/tile602.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/menu/tile649.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/menu/tile651.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/menu/tile652.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/menu/tile653.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ui/menu/tile654.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ui/menu/tile655.png" type="Texture" id=9]
[ext_resource path="res://assets/tetra_theme.tres" type="Theme" id=10]
[ext_resource path="res://assets/sounds/main_menu.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sprites/ui/menu/arrow_left.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/ui/menu/arrow_right.png" type="Texture" id=13]
[ext_resource path="res://assets/scenes/ui/focus_button.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/scripts/ui/main_menu.gd" type="Script" id=15]

[sub_resource type="TileSet" id=1]
0/name = "tile601.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tile602.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tile649.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tile650.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tile651.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tile652.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tile653.png 6"
6/texture = ExtResource( 7 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tile654.png 7"
7/texture = ExtResource( 8 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tile655.png 8"
8/texture = ExtResource( 9 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
bus = "Music"

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -59.9246
margin_bottom = -59.9246
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="Control"]
position = Vector2( -133.492, -8.48529 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -196608, 1610612739, 0, -196598, 1610612739, 0, -196592, 1610612739, 0, -131072, 2, 0, -131069, 1610612740, 0, -131062, 1610612738, 0, -131056, 2, 0, -1, -1610612733, 0, -65536, 0, 0, -65535, 6, 0, -65534, -1610612734, 0, -65533, -1073741823, 0, -65532, 6, 0, -65531, -1610612734, 0, -65530, 8, 0, -65529, -1610612734, 0, -65528, -1610612731, 0, -65526, -1073741816, 0, -65525, -1073741822, 0, -65524, -1610612731, 0, -65523, 7, 0, -65522, -1073741822, 0, -65521, -1610612729, 0, -65520, 2, 0, 0, 2, 0, 1, -1073741818, 0, 2, -1073741821, 0, 3, 2, 0, 4, 2, 0, 6, 2, 0, 8, 1610612738, 0, 10, 2, 0, 12, 2, 0, 13, 2, 0, 15, 2, 0, 16, 2, 0, 65536, 2, 0, 65537, -1073741819, 0, 65538, -1073741821, 0, 65539, 4, 0, 65540, 3, 0, 65542, -1073741819, 0, 65543, -1073741822, 0, 65544, -1610612728, 0, 65546, 2, 0, 65548, 2, 0, 65549, -1073741817, 0, 65550, -1073741822, 0, 65551, 1610612743, 0, 65552, 3, 0, 131072, 3, 0, 131080, 3, 0, 131082, 3, 0, 131084, 3, 0, 131088, 4, 0 )

[node name="Focus" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 42.7721
margin_bottom = 42.7721
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_left" type="Sprite" parent="Focus"]
position = Vector2( 112, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[node name="arrow_right" type="Sprite" parent="Focus"]
position = Vector2( -112, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = 5.62509
margin_right = 92.0
margin_bottom = 176.625
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" parent="VBoxContainer" instance=ExtResource( 14 )]
margin_right = 184.0
text = "Start Game"
focus_path = NodePath("../../Focus")

[node name="ButtonSecond" parent="VBoxContainer" instance=ExtResource( 14 )]
margin_top = 35.0
margin_right = 184.0
margin_bottom = 66.0
text = "Play Second Level"
focus_path = NodePath("../../Focus")

[node name="ButtonThird" parent="VBoxContainer" instance=ExtResource( 14 )]
margin_top = 70.0
margin_right = 184.0
margin_bottom = 101.0
text = "Play Third Level"
focus_path = NodePath("../../Focus")

[node name="ButtonFullscreen" parent="VBoxContainer" instance=ExtResource( 14 )]
margin_top = 105.0
margin_right = 184.0
margin_bottom = 136.0
text = "Toggle Fullscreen"
focus_path = NodePath("../../Focus")

[node name="ButtonQuit" parent="VBoxContainer" instance=ExtResource( 14 )]
margin_top = 140.0
margin_right = 184.0
margin_bottom = 171.0
text = "Quit"
focus_path = NodePath("../../Focus")
[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSecond" to="." method="_on_ButtonSecond_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonThird" to="." method="_on_ButtonThird_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
